# Industrial-Robotics-Project

./: LICENSE  README.md
Cad/Gripper/: Finger_1.SLDPRT  Finger_2.SLDPRT  Gripper_Connector.SLDPRT  Gripper_assy.SLDASM  Gripper_base.SLDPRT  finger1.STL  ~$Finger_1.SLDPRT
Cad/Gripper/Gripper_assy/: CMakeLists.txt  package.xml
Cad/IRB1200 7-70/: IRB1200H_5-90_IRC5_Link2_rev0.SLDPRT  IRB1200H_5-90_IRC5_Link3_rev0.SLDPRT  IRB1200H_5-90_IRC5_Link4_rev0.SLDPRT  IRB1200H_5-90_IRC5_Link5_rev0.SLDPRT  IRB1200H_5-90_IRC5_Link5_rev0.step  IRB1200H_5-90_IRC5_Link6_rev0.SLDPRT  IRB1200H_5-90_IRC5_Link6_rev0.step  IRB1200H_7-705-90_IRC5_Base_Standard_rev0.SLDPRT  IRB1200H_7-705-90_IRC5_Base_Standard_rev0.step  IRB1200H_7-705-90_IRC5_Link1_rev0.SLDPRT
Cad/abb_robot/: package.xml
Cad/abb_robot/config/: joint_controller.yaml
Cad/abb_robot/launch/: gazebo_launch.py
Cad/abb_robot/meshes/: base_link.STL  finger1.STL  finger2.STL
Cad/abb_robot/urdf/: robot_pkg.urdf
Ros Packages/abb_moveit/: .setup_assistant  CMakeLists.txt  package.xml
Ros Packages/abb_moveit/config/: abb_robot.srdf  abb_robot.urdf.xacro  moveit_controllers.yaml  robot_motion_planning_python.yaml  ros2_controllers.yaml
Ros Packages/abb_moveit/launch/: rsp.launch.py  setup_assistant.launch.py
Ros Packages/abb_moveit/scripts/: robot_moveit_py.py
Ros Packages/abb_robot/config/: joint_controller.yaml  joint_names_abb_robot_pkg.yaml
Ros Packages/abb_robot/launch/: gazebo.launch.py
Ros Packages/abb_robot/urdf/: robot_pkg.csv  robot_pkg.urdf
ros2_ws/abb_moveit/: .setup_assistant  CMakeLists.txt
ros2_ws/abb_moveit/config/: abb_robot.ros2_control.xacro  abb_robot.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot_motion_planning_python.yaml  ros2_controllers.yaml
ros2_ws/abb_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  robot_motion_planning.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/abb_robot/: CMakeLists.txt
submissions/: Milestone 1.docx
(+13 files in other folders)
